# Git-Account-Manager

./: .env.example  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
readme-first/: 00_project_overview.txt  01_architecture.txt  02_backend.txt  03_frontend.txt  04_database.txt  05_git_engine.txt  06_ui_ux.txt  07_security.txt  08_release.txt  09_coding_guidelines.txt  10_roadmap.txt  11_ai_rules.txt
scripts/: build-tauri.cmd
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accounts/: service.rs
src-tauri/src/commands/: account_commands.rs  auth_commands.rs  git_commands.rs  mod.rs  portable_commands.rs  repository_commands.rs  settings_commands.rs
src-tauri/src/credential/: service.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/git/: service.rs
src-tauri/src/models/: account.rs  mod.rs  repository.rs  settings.rs
src-tauri/src/oauth/: service.rs
src-tauri/src/repository/: service.rs
src-tauri/src/services/: mod.rs
src-tauri/src/settings/: service.rs
src-tauri/src/utils/: mod.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: tauri.ts  utils.ts
src/pages/: About.tsx  Accounts.tsx  Dashboard.tsx  Repositories.tsx  Settings.tsx
src/stores/: account-store.ts  theme-store.ts
src/types/: account.ts  repository.ts  settings.ts
(+7 files in other folders)
